--- a/Pungo Andongo/src/pungo/andongo/Menu_Proprietario.form
+++ b/Pungo Andongo/src/pungo/andongo/Menu_Proprietario.form
@@ -140,6 +140,9 @@
           <Dimension value="[228, 23]"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jImagem">
     </Component>
